--- a/index.ipynb
+++ b/index.ipynb
@@ -49,24 +49,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculate sum of squared errors between regression and mean line \n",
     "import numpy as np\n",
     "\n",
     "def sq_err(y_a, y_b):\n",
-    "    \"\"\"\n",
-    "    input\n",
-    "    y_a : true y values\n",
-    "    y_b : regression line\n",
-    "\n",
-    "    \n",
-    "    return\n",
-    "    squared error between regression and true line (ss_tot)\n",
-    "    \"\"\"\n",
-    "    pass\n",
+    "    errors=np.subtract(y_a,y_b)\n",
+    "    squared_errors=np.power(errors,2)\n",
+    "    sum_of_squared_errors=np.sum(squared_errors)\n",
+    "    return sum_of_squared_errors\n",
     "\n",
     "# Check the output with some toy data\n",
     "Y_a = np.array([1,3,5,7])\n",
@@ -90,9 +95,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.35"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculate Y_mean , squared error for regression and mean line , and calculate r-squared\n",
     "\n",
@@ -105,8 +121,11 @@
     "    return\n",
     "    r_squared value\n",
     "    \"\"\"\n",
-    "    pass\n",
-    "\n",
+    "    sse=sq_err(y_real,y_predicted)\n",
+    "    y_mean=np.mean(y_real)\n",
+    "    sst=sq_err(y_real,y_mean)\n",
+    "    r_squared=1-(sse/sst)\n",
+    "    return r_squared\n",
     "# Check the output with some toy data\n",
     "Y = np.array([1,3,5,7])\n",
     "Y_pred = np.array([1,5,5,10])\n",
@@ -148,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
